[project]
name = "statprocon"
version = "1.0.2"
description = "A Python helper library for generating Process Behaviour Charts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "packaging>=24.2",
    "typing-extensions>=4.12.2",
]
authors = [
  { name="Matt McCormick", email="mattmccor@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Statistical Process Control", "SPC", "Quality Control Chart", "QCC", "Process Behaviour Chart", "Process Behavior Chart", "XmR", "Shewhart", "Wheeler"]

[project.urls]
"Homepage" = "https://github.com/mattmccormick/statprocon"
"Bug Tracker" = "https://github.com/mattmccormick/statprocon/issues"
"Changelog" = "https://github.com/mattmccormick/statprocon/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bleach>=6.2.0",
    "build>=1.2.2.post1",
    "cffi>=1.17.1",
    "cryptography>=44.0.0",
    "distlib>=0.3.9",
    "filelock>=3.16.1",
    "idna>=3.10",
    "keyring>=25.6.0",
    "markdown-it-py>=3.0.0",
    "mypy>=1.14.1",
    "mypy-extensions>=1.0.0",
    "pkginfo>=1.12.0",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "requests>=2.32.3",
    "six>=1.17.0",
    "tomli>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
