[project]
name = "statprocon"
version = "1.0.2"
description = "A Python helper library for generating Process Behaviour Charts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
  { name="Matt McCormick", email="mattmccor@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Statistical Process Control", "SPC", "Quality Control Chart", "QCC", "Process Behaviour Chart", "Process Behavior Chart", "XmR", "Shewhart", "Wheeler"]

[project.urls]
"Homepage" = "https://github.com/mattmccormick/statprocon"
"Bug Tracker" = "https://github.com/mattmccormick/statprocon/issues"
"Changelog" = "https://github.com/mattmccormick/statprocon/blob/main/CHANGELOG.md"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "mypy-extensions>=1.0.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
